04_app-deployment-with-ingress/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world1
  template:
    metadata:
      labels:
        app: hello-world1
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
      - name: hello-world1
        image: marcandreg/mock:hello
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 3000
