04_app-deployment-with-ingress/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world1-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: hello-world1
