04_app-deployment-with-ingress/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: ingress.mag.yt
    http:
      paths:
      - backend:
          serviceName: hello-world1-svc
          servicePort: 80
